--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,6 +2,6 @@ browser.id=Chrome.INTEGRATED
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=
-index.file=index.php
+index.file=index.html
 run.as=LOCAL
 url=http://localhost:8080
